Fixed mobile responsive image size, added dark mode navbar toggler fix, updated hero title with job title, fixed duplicate applyLanguage function in JS

--- a/style.css
+++ b/style.css
@@ -287,3 +287,12 @@
   .dark-mode .navbar-toggler-icon {
     filter: invert(1);
   }
+
+
+  @media (max-width: 768px) {
+    .profile-img {
+      width: 250px;
+      height: 250px;
+      margin-top: 30px;
+    }
+  }
